--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -127,7 +127,7 @@
 \listoftodos{}
 
 \section{Introduction}
-\todo[inline]{Write the introduction}
+\todo[inline]{Write the introduction, Remember that \MLSS{} is multi-level syllogistics with singleton}
 
 \subsection{Related work}
 AFP entry~\cite{hybrid_logic_afp} and workshop paper in Isabelle 2022 workshop.
